# Multi-Agent-Rescue-Intelligence-Platform

./: .dockerignore  .gitignore  .gitlab-ci.yml  .mailmap  CONTRIBUTING.md  Dockerfile  Dockerfile_moe  LICENSE  README.md  README_moe.md  demo_moe.py  docker-compose.yml  pyproject.toml
.gitlab/merge_request_templates/: Default.md
checkpoints/: mappo.pt  moe.pt  qmix.pt  transfqmix.pt
configs/: default_scenario.yaml
docs/: STACK.md  architecture.md  e2_ensemble_distillation.md  product_backlog.md  requirements.yaml  st04_design.md
docs/meetings/inside/: Meeting 02.06.2026.md  Meeting 09.06.2026.md  Meeting 26.05.md  Template copy.md  Template.md
docs/meetings/withProf/: Template.md
docs/sprints/: sprint_2.md  sprint_3.md
scripts/: compare_all.py  compare_paradigms.py  distill_expert2.py  eval_checkpoints.py  pretrain_moe.py  run_scenario.py  train_mappo.py  train_moe.py  train_qmix.py  train_transfqmix.py
shared/: __init__.py  shared.py
src/rescue_sim/: __init__.py  marl_common.py  shared.py
src/rescue_sim/Ensemble/: __init__.py  distill.py  ensemble.py
src/rescue_sim/MAPPO/: __init__.py  environment.py  mappo.py
src/rescue_sim/MoE/: __init__.py  gated_distill.py  live_moe.py  moe.py  pipeline.py
tests/: test_baseline.py  test_baseline2.py  test_central_sensor.py  test_communications.py  test_ensemble.py  test_epidemic_q.py  test_evaluation.py  test_grid_generation.py  test_mappo.py  test_moe.py  test_movement.py  test_multi_agent_baseline.py  test_q_learning.py  test_qmix.py  test_shared.py  test_simulation_runner.py  test_transfqmix.py
(+43 files in other folders)
