[project]
name = "rescue-sim"
version = "0.1.0"
description = "Single-agent rescue team simulator for ST04."
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.26",
    "pydantic>=2.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.5",
]
visualization = [
    "matplotlib>=3.8",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]
